--- a/services/chat-client/repo/widget.html
+++ b/services/chat-client/repo/widget.html
@@ -1,21 +1,74 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hommie</title>
+    <title>Hommie Chat Widget</title>
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0&family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0" />
     <link rel="stylesheet" href="style.css" />
+    <style>
+        /* Estilos específicos para widget embebido */
+        body {
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            height: 100vh;
+            width: 100vw;
+        }
+
+        /* Ocultar el botón flotante en modo widget */
+        #chatbot-toggler {
+            display: none !important;
+        }
+
+        /* El popup siempre visible y en pantalla completa */
+        .chatbot-popup {
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            width: 100% !important;
+            height: 100% !important;
+            max-width: none !important;
+            max-height: none !important;
+            border-radius: 0 !important;
+            box-shadow: none !important;
+            opacity: 1 !important;
+            pointer-events: all !important;
+            transform: none !important;
+            display: flex !important;
+            flex-direction: column;
+        }
+
+        .chat-header {
+            flex-shrink: 0;
+        }
+
+        .chat-body {
+            flex: 1;
+            overflow-y: auto;
+        }
+
+        .chat-footer {
+            flex-shrink: 0;
+        }
+    </style>
+    <script>
+        // Obtener client_id de la URL
+        const urlParams = new URLSearchParams(window.location.search);
+        const CLIENT_ID = urlParams.get('client_id') || 'WIDGET-DEFAULT';
+        console.log('Widget iniciado con client_id:', CLIENT_ID);
+
+        // Hacer disponible globalmente para config.js
+        window.WIDGET_CLIENT_ID = CLIENT_ID;
+    </script>
 </head>
 
 <body>
-    <button id="chatbot-toggler">
-        <span class="material-symbols-outlined">mode_comment</span>
-        <span class="material-symbols-rounded">close</span>
-    </button>
-
+    <!-- Chatbot siempre abierto en modo widget -->
     <div class="chatbot-popup">
         <!-- Chatbot Header -->
         <div class="chat-header">
@@ -29,7 +82,7 @@
 
                 <h2 class="logo-text">Hommie</h2>
             </div>
-            <button id="close-chatbot" class="material-symbols-rounded">keyboard_arrow_down</button>
+            <!-- Sin botón de cerrar en modo widget -->
         </div>
 
         <!-- Chatbot Body -->
@@ -65,13 +118,11 @@
         </div>
     </div>
 
-    <!-- linking emoji mart script for emoji picker -->
+    <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/emoji-mart@latest/dist/browser.js"></script>
-
-    <!-- Orden correcto de scripts para integración -->
     <script src="config.js"></script>
     <script src="core-api.js"></script>
-    <script src="scripts.js"></script>
+    <script src="widget-script.js"></script>
 </body>
 
 </html>
