--- a/services/chat-client/www/index copy.html
+++ b/services/chat-client/www/index copy.html
@@ -71,7 +71,7 @@
     <!-- Orden correcto de scripts para integración -->
     <script src="config.js"></script>
     <script src="core-api.js"></script>
-    <script src="scripts.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
