--- a/services/ai-first/frontend/index.html
+++ b/services/ai-first/frontend/index.html
@@ -7,17 +7,20 @@
     <title>AI-Realtor - Web Interface</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="AI-Realtor Lead Manager" name="description" />
-    <link rel="shortcut icon" href="themes/images/favicon.ico">
+    <base href="/">
+    <link rel="shortcut icon" href="/themes/images/favicon.ico">
 
     <!-- Layout config Js -->
+    <!-- gridjs css -->
+    <link rel="stylesheet" href="/themes/libs/gridjs/theme/mermaid.min.css">
     <!-- Bootstrap Css (Local) -->
-    <link href="themes/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="/themes/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <!-- Icons Css (Local) -->
-    <link href="themes/css/icons.min.css" rel="stylesheet" type="text/css" />
+    <link href="/themes/css/icons.min.css" rel="stylesheet" type="text/css" />
     <!-- App Css (Velzon Official) -->
-    <link href="themes/css/app.min.css" rel="stylesheet" type="text/css" />
+    <link href="/themes/css/app.min.css" rel="stylesheet" type="text/css" />
     <!-- custom Css (Velzon Official) -->
-    <link href="themes/css/custom.min.css" rel="stylesheet" type="text/css" />
+    <link href="/themes/css/custom.min.css" rel="stylesheet" type="text/css" />
     <!-- Custom Styles for Switches -->
     <style>
         /* Force Red Background when switch is unchecked and has form-switch-danger class */
@@ -26,6 +29,73 @@
             /* Velzon Danger Color */
             border-color: #f06548;
             background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23fff'/%3e%3c/svg%3e");
+        }
+
+        /* Grid.js Theme Compatibility */
+        .gridjs-container {
+            color: var(--vz-body-color) !important;
+            padding: 0 !important;
+        }
+
+        .gridjs-wrapper {
+            border: 1px solid var(--vz-border-color) !important;
+            box-shadow: none !important;
+            border-radius: 0.25rem !important;
+        }
+
+        .gridjs-table {
+            background-color: transparent !important;
+        }
+
+        .gridjs-tbody,
+        .gridjs-thead {
+            background-color: transparent !important;
+        }
+
+        .gridjs-th {
+            background-color: var(--vz-light) !important;
+            color: var(--vz-body-color) !important;
+            border-color: var(--vz-border-color) !important;
+        }
+
+        .gridjs-td {
+            border-color: var(--vz-border-color) !important;
+            background-color: transparent !important;
+        }
+
+        .gridjs-search-input {
+            background-color: var(--vz-input-bg) !important;
+            color: var(--vz-input-color) !important;
+            border-color: var(--vz-input-border) !important;
+            border-radius: 0.25rem !important;
+        }
+
+        .gridjs-footer {
+            background-color: transparent !important;
+            border-color: var(--vz-border-color) !important;
+            color: var(--vz-body-color) !important;
+            padding: 12px 0 !important;
+        }
+
+        .gridjs-pagination .gridjs-pages button {
+            background-color: var(--vz-card-bg-custom, var(--vz-input-bg)) !important;
+            color: var(--vz-body-color) !important;
+            border-color: var(--vz-border-color) !important;
+        }
+
+        .gridjs-pagination .gridjs-pages button:hover {
+            background-color: var(--vz-light) !important;
+        }
+
+        .gridjs-pagination .gridjs-pages button:disabled {
+            background-color: var(--vz-input-bg) !important;
+            opacity: 0.5;
+        }
+
+        .gridjs-pagination .gridjs-pages button.gridjs-currentPage {
+            background-color: var(--vz-primary) !important;
+            color: #fff !important;
+            border-color: var(--vz-primary) !important;
         }
     </style>
 </head>
@@ -49,21 +119,23 @@
     </div>
 
     <!-- JAVASCRIPT -->
-    <script src="themes/js/bootstrap.bundle.min.js"></script>
+    <script src="/themes/js/bootstrap.bundle.min.js"></script>
 
     <!-- Sweet Alert css-->
-    <link href="themes/libs/sweetalert2/sweetalert2.min.css" rel="stylesheet" type="text/css" />
+    <link href="/themes/libs/sweetalert2/sweetalert2.min.css" rel="stylesheet" type="text/css" />
 
     <!-- Core Renderer -->
-    <script src="themes/libs/sweetalert2/sweetalert2.min.js"></script>
-    <script src="config.js"></script>
+    <script src="/themes/libs/sweetalert2/sweetalert2.min.js"></script>
+    <!-- gridjs js -->
+    <script src="/themes/libs/gridjs/gridjs.umd.js"></script>
+    <script src="/config.js"></script>
     <script>
         // Simple Auth Guard
         if (!localStorage.getItem('access_token')) {
             window.location.href = 'login.html';
         }
     </script>
-    <script type="module" src="renderer/main.js?v=23"></script>
+    <script type="module" src="/renderer/main.js?v=31"></script>
 </body>
 
 </html>
